--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,66 @@
 # Dependencies
 node_modules/
+**/node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.production
+.env.development
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Runtime data
+# OS files
 .DS_Store
+Thumbs.db
+
+# Build output
+dist/
+build/
+**/dist/
+**/build/
+
+# Cache files
+.cache/
+.next/
+.vite/
+*.tsbuildinfo
+
+# IDE/editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+*.bak
+
+# Test coverage
+coverage/
+
+# Temporary or local-only files
+*.local
+*.log
+*.tmp
+*.out
+
+# Frontend specific (Vite/React)
+frontend/dist/
+frontend/node_modules/
+
+# Backend specific
+backend/__pycache__/
+backend/.pytest_cache/
+backend/.venv/
+backend/venv/
+backend/.mypy_cache/
+backend/.coverage
+
+# Miscellaneous
+*.pid
+*.seed
+*.pid.lock
